[bumpversion]
current_version = 0.1.2
commit = True
tag = True

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[bumpversion:file:setup.py]

[flake8]
max-line-length = 120
exclude = env/*

[tool:pytest]
testpaths = tests
norecursedirs = 
	.git
	.tox
	.env
	env
	dist
	docs
	build
	htmlcov

[aliases]
test = pytest

